🐛 Fix: Ajuste na posição do botão Dark Mode (top: 100px)

--- a/assets/css/ux-phase2.css
+++ b/assets/css/ux-phase2.css
@@ -199,7 +199,7 @@
 
 .dark-mode-toggle {
     position: fixed;
-    top: 80px;
+    top: 100px;
     right: 20px;
     width: 50px;
     height: 50px;
